[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game_Files/Assets_UI/Menu Screen/Menu.gd" type="Script" id=1]
[ext_resource path="res://Game_Files/Assets_UI/Menu Screen/Menu_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/FadeIn.tscn" type="PackedScene" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = -54.0
margin_right = 74.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 65.0
margin_bottom = 14.0
focus_neighbour_top = NodePath("../Quit")
theme = ExtResource( 2 )
text = "Start"
flat = true

[node name="How To Play" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 65.0
margin_bottom = 32.0
theme = ExtResource( 2 )
text = "How To Play"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 65.0
margin_bottom = 50.0
focus_neighbour_bottom = NodePath("../Start")
theme = ExtResource( 2 )
text = "Quit"
flat = true

[node name="FadeIn" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/How To Play" to="." method="_on_How_To_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]
